--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>jms-test-tool-1</groupId>
-    <artifactId>jms-test-tool-1</artifactId>
+    <groupId>jms-test-tool</groupId>
+    <artifactId>jms-test-tool</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
 
@@ -75,6 +75,19 @@
             <artifactId>httpclient</artifactId>
             <version>4.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>com.tibco.ems</groupId>-->
+            <!--<artifactId>tibjms</artifactId>-->
+            <!--<version>5.0.0</version>-->
+            <!--<scope>runtime</scope>-->
+        <!--</dependency>-->
 
         <!-- testing -->
         <dependency>
