--- a/pom.xml
+++ b/pom.xml
@@ -82,12 +82,21 @@
             <version>3.3.1</version>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>com.tibco.ems</groupId>-->
-            <!--<artifactId>tibjms</artifactId>-->
-            <!--<version>5.0.0</version>-->
-            <!--<scope>runtime</scope>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>javax.jms</groupId>
+            <artifactId>jms</artifactId>
+            <version>2.0</version>
+            <scope>system</scope>
+            <systemPath>/Users/jjwyse/Downloads/jms-2.0.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>com.tibco.ems</groupId>
+            <artifactId>tibjms</artifactId>
+            <version>5.0.0</version>
+            <scope>system</scope>
+            <systemPath>/Users/jjwyse/Downloads/tibjms.jar</systemPath>
+        </dependency>
 
         <!-- testing -->
         <dependency>
