--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,16 @@
             <artifactId>camel-core</artifactId>
             <version>2.13.0</version>
         </dependency>
+
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-spring</artifactId>
+            <version>2.13.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-jaxb</artifactId>
             <version>2.13.0</version>
         </dependency>
 
